REST: Refactoring and fix Swiss Tournament